--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -10,7 +9,7 @@
 
     <groupId>org.jenkins-ci.plugins.qc</groupId>
     <artifactId>hp-quality-center</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>1.3</version>
     <packaging>hpi</packaging>
 
     <name>HP ALM Quality Center Plugin</name>
@@ -39,7 +38,7 @@
         <connection>scm:git:https://github.com/jenkinsci/hp-quality-center-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/hp-quality-center-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/hp-quality-center-plugin</url>
-        <tag>HEAD</tag>
+        <tag>hp-quality-center-1.3</tag>
     </scm>
 
     <repositories>
