--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>org.jenkins-ci.plugins.qc</groupId>
     <artifactId>hp-quality-center</artifactId>
-    <version>1.4-SNAPSHOT</version>
+    <version>1.4</version>
     <packaging>hpi</packaging>
 
     <name>HP ALM Quality Center Plugin</name>
@@ -38,7 +38,7 @@
         <connection>scm:git:https://github.com/jenkinsci/hp-quality-center-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/hp-quality-center-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/hp-quality-center-plugin</url>
-        <tag>HEAD</tag>
+        <tag>hp-quality-center-1.4</tag>
     </scm>
 
     <repositories>
