--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,8 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>2.33</version>
+        <version>4.51</version>
+        <relativePath/>
     </parent>
 
     <groupId>org.jenkins-ci.plugins.qc</groupId>
@@ -16,8 +17,7 @@
     <url>https://wiki.jenkins-ci.org/display/JENKINS/HP+ALM+Quality+Center+Plugin</url>
 
     <properties>
-        <jenkins.version>1.642.4</jenkins.version>
-        <java.level>6</java.level>
+        <jenkins.version>2.346.3</jenkins.version>
     </properties>
 
     <developers>
